Fix toolbars becoming immovable after configuration

BUG:441808